--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<
+<html>
+
+<head>
+  <title>Alura Plus</title>
+  <meta charset="UTF -8">
+  <meta name="viewport"  content="width=device-width, initial-scale=1">
+  <link rel="styles.css
